# dorai

./: .gitignore  README.md
lab/: README.md  dorai_ort_helper.py  run_dorai.sh  run_simulation.m
lab/config/: default.m
lab/core/: AudioIO.m  OrtEnhancer.m  SourceMixer.m  build_geometry.m  load_wav_loop.m  print_geometry.m
lab/visualization/: SimulatorUI.m  draw_dog.m  draw_scene.m
stt_mod/: package.xml  record_clean.py  setup.cfg  setup.py  stt.py
stt_mod/test/: whisper_test.py
voice_mod/: dorai_beamformer.ort  package.xml  record_debug.py  setup.py  voice.py
voice_mod/resource/: voice_mod
voice_mod/test/: test_dsp.py
